Bug 362359 - wrong alignment on landscape sheet after printing to pdf
Summary: wrong alignment on landscape sheet after printing to pdf
Status: RESOLVED FIXED
Alias: None
Product: kolourpaint
Classification: Applications
Component: general (show other bugs)
Version: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kolourpaint-support
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-27 16:28 UTC by RJ
Modified: 2016-04-30 15:18 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description RJ 2016-04-27 16:28:53 UTC
1. change alignment to landscape and tick center of the page.
2. on pdf picture will be on the bottom

Reproducible: Always
Comment 1 Martin Koller 2016-04-30 15:18:08 UTC
Git commit c57d2cbd403c7579131fc2916dd1e7b8ac9d83bf by Martin Koller.
Committed on 30/04/2016 at 15:11.
Pushed by mkoller into branch 'master'.

Fix centered printout in landscape mode

M  +8    -16   mainWindow/kpMainWindow_File.cpp

http://commits.kde.org/kolourpaint/c57d2cbd403c7579131fc2916dd1e7b8ac9d83bf
Comment 2 Martin Koller 2016-04-30 15:18:27 UTC
Git commit 3a48dd18fa60649956d894803b50a8e12e89b103 by Martin Koller.
Committed on 30/04/2016 at 15:06.
Pushed by mkoller into branch 'frameworks'.

Fix centered printout in landscape mode

M  +8    -16   mainWindow/kpMainWindow_File.cpp

http://commits.kde.org/kolourpaint/3a48dd18fa60649956d894803b50a8e12e89b103