Fix centered printout in landscape mode

BUG: 362359